Feat: Password change link in notification

--- a/assets/webconfig/index.html
+++ b/assets/webconfig/index.html
@@ -247,6 +247,7 @@
 			<div class="bs-callout bs-callout-warning">
 				<h4 data-i18n="dashboard_message_default_password_t"></h4>
 				<span data-i18n="dashboard_message_default_password"></span>
+				<a data-i18n="InfoDialog_changePassword_title" style="cursor:pointer" onClick="changePassword()"></a>
 			</div>
 		</div>
 		<div id="hyperion_disabled_notify" style="display:none;padding:0 10px;margin:0">
