--- a/assets/webconfig/content/login.html
+++ b/assets/webconfig/content/login.html
@@ -6,13 +6,15 @@
 					<h3 class="panel-title">Login</h3>
 				</div>
 				<div class="panel-body">
-					<div class="form-group">
-						<input name="password" class="form-control" type="password" id="password" placeholder="Password" autocomplete="off"/>
-						<input name="show_pw" type="checkbox" id="show_pw"/><label for="show_pw">Show/Hide Password</label>
-					</div>
-					<div class="form-group">
-						<button class="btn btn-sm btn-success" id="btn_password" onclick="requestAuthorization(document.getElementById('password').value)" disabled><i class="fa fa-fw fa-unlock"></i>Login</button>
-					</div>
+					<form>
+						<div class="form-group">
+							<input name="password" class="form-control" type="password" id="password" placeholder="Password" autocomplete="off"/>
+							<input name="show_pw" type="checkbox" id="show_pw"/><label for="show_pw">Show/Hide Password</label>
+						</div>
+						<div class="form-group">
+							<button type="submit" class="btn btn-sm btn-success" id="btn_password" onclick="requestAuthorization(document.getElementById('password').value); return false;" disabled><i class="fa fa-fw fa-unlock"></i>Login</button>
+						</div>
+					</form>
 				</div>
 			</div>
 		</div>
