feat: add instance sync ui

--- a/assets/webconfig/content/conf_general.html
+++ b/assets/webconfig/content/conf_general.html
@@ -3,12 +3,12 @@
 		<div class="col-lg-12">
 			<h3 class="page-header"><i class="fa fa-wrench fa-fw"></i><span
 					data-i18n="conf_general_label_title">General</span></h3>
-			<div class="row" id="conf_cont"></div>
-			<div class="row">
+			<div class="row" id="conf_cont">
 				<div class="col-lg-6" id="inst_desc">
 					<div class="panel panel-default">
 						<div class="panel-heading"><i class="fa fa-plus fa-fw"></i><span
-								data-i18n="conf_general_inst_title"></span></div>
+								data-i18n="conf_general_inst_title"></span>
+						</div>
 						<div class="panel-body">
 							<div id="inst_desc_cont"></div>
 							<div id="itable"></div>
@@ -27,14 +27,16 @@
 						</div>
 						<div class="panel-footer" style="text-align: right;">
 							<button class="btn btn-primary" id="btn_create_inst" data-i18n="conf_general_createInst_btn"
-								disabled>Create New Instance</button>
+								disabled>Create
+								New Instance</button>
 						</div>
 					</div>
 				</div>
 				<div class="col-lg-6" id="conf_imp">
 					<div class="panel panel-default">
 						<div class="panel-heading"><i class="fa fa-wrench fa-fw"></i><span
-								data-i18n="conf_general_impexp_title"></span></div>
+								data-i18n="conf_general_impexp_title"></span>
+						</div>
 						<div class="panel-body">
 							<p data-i18n="conf_general_impexp_l1" style="font-weight:bold"></p>
 							<p data-i18n="conf_general_impexp_l2" style="font-weight:bold"></p>
@@ -48,15 +50,8 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-lg-6" id="conf_instSync">
-					<div class="panel panel-default">
-						<div class="panel-heading"><i class="fa fa-wrench fa-fw"></i><span
-								data-i18n="conf_general_instSyncexp_title"></span>
-						</div>
-						<div id="conf_instSync_cont">
-						</div>
-					</div>
-				</div>
+			</div>
+			<div class="row">
 			</div>
 		</div>
 	</div>
