CHanges 26.12.2019 Correction and PowerOff add

--- a/assets/webconfig/content/dashboard.html
+++ b/assets/webconfig/content/dashboard.html
@@ -51,6 +51,10 @@
 										<p style="font-weight:bold" data-i18n="dashboard_infobox_label_smartacc">Smart Access<p>
 										<span id="btn_hsc"></span>
 										<hr>
+										<hr>
+										<p style="font-weight:bold" data-i18n="dashboard_infobox_label_pltf">RPi Shutdown<p>
+											<span id="btn_pltfpoweroff"></span>
+											<hr>
 										<span id="versioninforesult"></span>
 									</div>
 								</div>
