Changed WebUI Version Check to SemVer. Also addes "Alpha" Channel

--- a/assets/webconfig/index.html
+++ b/assets/webconfig/index.html
@@ -23,6 +23,9 @@
 	<!-- jQuery -->
 	<script src="js/lib/jquery.min.js"></script>
 
+	<!-- SemVer -->
+	<script src='js/lib/semver.js'></script>
+
 	<!-- Hyperion -->
 	<script src="js/hyperion.js"></script>
 	<script src="js/ui_utils.js"></script>
