--- a/assets/webconfig/index.html
+++ b/assets/webconfig/index.html
@@ -26,6 +26,10 @@
 	<!-- SemVer -->
 	<script src='js/lib/semver.js'></script>
 
+	<!-- md Stuff -->
+	<script src="js/lib/marked.min.js"></script>
+	<script type="text/javascript" src="js/lib/purify.min.js"></script>
+
 	<!-- Hyperion -->
 	<script src="js/hyperion.js"></script>
 	<script src="js/ui_utils.js"></script>
