Introduce Dark Mode

--- a/assets/webconfig/index.html
+++ b/assets/webconfig/index.html
@@ -109,6 +109,11 @@
 						<i id="btn_streamer_icon" class="fa fa-video-camera fa-fw"></i>
 					</a>
 				</li>
+				<li class="dropdown" id="btn_darkmode">
+				<a>
+					<i id="btn_darkmode_icon" class="fa fa-moon-o"></i>
+				</a>
+			</li>
 				<!-- instance switcher -->
 				<li class="dropdown" id="btn_hypinstanceswitch" style="display:none">
 					<a class="dropdown-toggle" data-toggle="dropdown" href="#">
