--- a/assets/webconfig/index.html
+++ b/assets/webconfig/index.html
@@ -88,7 +88,7 @@
 		<!-- Navigation -->
 		<nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
 			<div class="navbar-header">
-				<button type="button" class="navbar-toggle closed" aria-controls="navbar" style="background-color:#d0d0d0;">
+				<button type="button" class="navbar-toggle closed" aria-controls="navbar">
 					<span class="sr-only">Toggle navigation</span>
 					<span class="icon-bar top-bar"></span>
 					<span class="icon-bar middle-bar"></span>
