--- a/assets/webconfig/index.html
+++ b/assets/webconfig/index.html
@@ -34,9 +34,11 @@
 	<script src="js/hyperion.js"></script>
 	<script src="js/ui_utils.js"></script>
 
+	<!-- BSToggle -->
+	<script src="js/lib/bootstrap-toggle.min.js"></script>
+
 	<!-- Colorpicker -->
 	<script src="js/lib/bootstrap-colorpicker.min.js"></script>
-	<link href="css/bootstrap-colorpicker.min.css" rel="stylesheet">
 
 	<!-- BS Notfiy -->
 	<script src="js/lib/bootstrap-notify.min.js"></script>
@@ -54,6 +56,10 @@
 
 	<!-- Bootstrap Core CSS -->
 	<link href="css/bootstrap.min.css" rel="stylesheet">
+
+	<link href="css/bootstrap-toggle.min.css" rel="stylesheet">
+
+	<link href="css/bootstrap-colorpicker.min.css" rel="stylesheet">
 
 	<!-- MetisMenu CSS -->
 	<link href="css/metisMenu.css" rel="stylesheet">
