Toggle-Buttons for Component Remote Control (#677) (#778)
* Toggle-Buttons for Component Remote Control (#677)

* Update remote.js

* Handle Component Updates individually

* Avoid unnecessary updates

Co-authored-by: brindosch <edeltraud70@gmx.de>

--- a/assets/webconfig/index.html
+++ b/assets/webconfig/index.html
@@ -36,7 +36,6 @@
 
 	<!-- Colorpicker -->
 	<script src="js/lib/bootstrap-colorpicker.min.js"></script>
-	<link href="css/bootstrap-colorpicker.min.css" rel="stylesheet">
 
 	<!-- BS Notfiy -->
 	<script src="js/lib/bootstrap-notify.min.js"></script>
@@ -54,6 +53,11 @@
 
 	<!-- Bootstrap Core CSS -->
 	<link href="css/bootstrap.min.css" rel="stylesheet">
+  <link href="css/bootstrap-colorpicker.min.css" rel="stylesheet">
+
+	<!-- BSToggle -->
+  <script src="js/lib/bootstrap-toggle.min.js"></script>
+  <link href="css/bootstrap-toggle.min.css" rel="stylesheet">
 
 	<!-- MetisMenu CSS -->
 	<link href="css/metisMenu.css" rel="stylesheet">
