--- a/assets/webconfig/content/conf_leds.html
+++ b/assets/webconfig/content/conf_leds.html
@@ -165,7 +165,71 @@
 																<div class="input-group-addon" data-i18n="edt_append_percent">%</div>
 															</td>
 														</tr>
-											<!--			<tr>
+														<tr>
+															<td class="ltd">
+																<label class="ltdlabel" for="ip_cl_ptl" data-i18n="conf_leds_layout_ptl">Point Top Left</label>
+															</td>
+															<td class="itd input-group">
+																<input class="form-control ledCLconstr" id="ip_cl_ptlh" type="number" value="0" min="0" max="40" step="1"></input>
+																<div class="input-group-addon" data-i18n="edt_append_percent_h">%h</div>
+															</td>
+														</tr>
+														<tr>
+															<td class="ltd"></td>
+															<td class="itd input-group">
+																<input class="form-control ledCLconstr" id="ip_cl_ptlv" type="number" value="0" min="0" max="40" step="1"></input>
+																<div class="input-group-addon" data-i18n="edt_append_percent_v">%v</div>
+															</td>
+														</tr>
+														<tr>
+															<td class="ltd">
+																<label class="ltdlabel" for="ip_cl_ptr" data-i18n="conf_leds_layout_ptr">Point Top Right</label>
+															</td>
+															<td class="itd input-group">
+																<input class="form-control ledCLconstr" id="ip_cl_ptrh" type="number" value="100" min="60" max="100" step="1"></input>
+																<div class="input-group-addon" data-i18n="edt_append_percent_h">%</div>
+															</td>
+														</tr>
+														<tr>
+															<td class="ltd"></td>
+															<td class="itd input-group">
+																<input class="form-control ledCLconstr" id="ip_cl_ptrv" type="number" value="0" min="0" max="40" step="1"></input>
+																<div class="input-group-addon" data-i18n="edt_append_percent_v">%</div>
+															</td>
+														</tr>
+														<tr>
+															<td class="ltd">
+																<label class="ltdlabel" for="ip_cl_pbr" data-i18n="conf_leds_layout_pbr">Point Bottom Right</label>
+															</td>
+															<td class="itd input-group">
+																<input class="form-control ledCLconstr" id="ip_cl_pbrh" type="number" value="100" min="60" max="100" step="1"></input>
+																<div class="input-group-addon" data-i18n="edt_append_percent_h">%</div>
+															</td>
+														</tr>
+														<tr>
+															<td class="ltd"></td>
+															<td class="itd input-group">
+																<input class="form-control ledCLconstr" id="ip_cl_pbrv" type="number" value="100" min="60" max="100" step="1"></input>
+																<div class="input-group-addon" data-i18n="edt_append_percent_v">%</div>
+															</td>
+														</tr>
+														<tr>
+															<td class="ltd">
+																<label class="ltdlabel" for="ip_cl_pbl" data-i18n="conf_leds_layout_pbl">Point Bottom Left</label>
+															</td>
+															<td class="itd input-group">
+																<input class="form-control ledCLconstr" id="ip_cl_pblh" type="number" value="0" min="0" max="40" step="1"></input>
+																<div class="input-group-addon" data-i18n="edt_append_percent_h">%</div>
+															</td>
+														</tr>
+														<tr>
+															<td class="ltd"></td>
+															<td class="itd input-group">
+																<input class="form-control ledCLconstr" id="ip_cl_pblv" type="number" value="100" min="60" max="100" step="1"></input>
+																<div class="input-group-addon" data-i18n="edt_append_percent_v">%</div>
+															</td>
+														</tr>
+    														<!--			<tr>
 															<td class="ltd">
 																<label class="ltdlabel" for="ip_cl_cornergap" data-i18n="conf_leds_layout_cl_cornergap">Corner Gap</label>
 															</td>
@@ -180,6 +244,7 @@
 											</div>
 										</div>
 									</div>
+
 								</div>
 								<div class="panel-footer" style="text-align:right;">
 									<button id="btn_cl_save" class="btn btn-primary"><i class="fa fa-fw fa-save"></i><span data-i18n="conf_leds_layout_button_savelay">Save layout</span></button>
