Use Material Design Icons in WebUI/switch hyperion logo in darkmode

--- a/assets/webconfig/index.html
+++ b/assets/webconfig/index.html
@@ -72,6 +72,9 @@
 	<!-- Custom Fonts -->
 	<link href="css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
+	<!-- Material Design Icons - https://github.com/Templarian/MaterialDesign-Webfont -->
+	<link href="css/materialdesignicons.min.css" media="all" rel="stylesheet" type="text/css">
+
 	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 	<!--[if lt IE 9]>
@@ -101,7 +104,7 @@
 					<span class="icon-bar middle-bar"></span>
 					<span class="icon-bar bottom-bar"></span>
 				</button>
-				<a class="navbar-brand" href="https://www.hyperion-project.org?pk_campaign=WebUI&pk_kwd=mainlogo" target="_blank"><img src="img/hyperion/hyperionlogo.png" alt="Redefine ambient light!" height="60"></a>
+				<a class="navbar-brand" href="https://www.hyperion-project.org?pk_campaign=WebUI&pk_kwd=mainlogo" target="_blank"><img id="navbar_brand_logo" src="img/hyperion/hyperionlogo.png" alt="Redefine ambient light!" height="60"></a>
 
 			</div>
 			<!-- /.navbar-header -->
