--- a/assets/webconfig/content/dashboard.html
+++ b/assets/webconfig/content/dashboard.html
@@ -6,11 +6,13 @@
 						<div id="dash_intro">
 						
 						<div class="row instances">
+						
+							<!-- Instance(s) -->
 
 							<!-- Config status -->
 							<div class="col-md-6 col-xxl-3">
 								<div class="panel panel-default">
-									<div class="panel-heading">
+									<div class="panel-heading panel-system">
 										<span id="dash_config_status">Status</span>
 									</div>
 									<div class="panel-body">
