--- a/assets/webconfig/content/conf_grabber.html
+++ b/assets/webconfig/content/conf_grabber.html
@@ -1,12 +1,23 @@
-
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-lg-12">
-			<h3 class="page-header"><i class="fa fa-camera fa-fw"></i><span  data-i18n="main_menu_grabber_conf_token">Capturing Hardware</span></h3> 
+			<h3 class="page-header"><i class="fa fa-camera fa-fw"></i><span  data-i18n="main_menu_grabber_conf_token">Capturing Hardware</span></h3>
+
+			<div class="panel panel-default">
+				<div class="panel-heading panel-instance">
+					<span id="instance_name">Instance</span>
+					<div class="dropdown pull-right" id="btn_hypinstanceswitch" style="cursor:pointer">
+						<a class="dropdown-toggle" data-toggle="dropdown" href="#">
+							<i class="mdi mdi-lightbulb-group mdi-24px"></i><i class="mdi mdi-menu-down mdi-24px"></i>
+						</a>
+						<ul id="hyp_inst_listing" class="dropdown-menu dropdown-alerts"></ul>
+					</div>
+				</div>
+			</div>
+
 			<div id="conf_cont"></div>
 		</div>
 	</div>
 </div>
-
 
 <script src="/js/content_grabber.js"></script>
