--- a/assets/webconfig/content/conf_network.html
+++ b/assets/webconfig/content/conf_network.html
@@ -6,7 +6,7 @@
 				<div class="row" id="conf_cont_tok">
 					<div class="col-lg-6" id="tok_desc">
 						<div class="panel panel-default">
-							<div class="panel-heading"><i class="fa fa-key fa-fw"></i><span data-i18n="conf_network_tok_title"></span></div>
+							<div class="panel-heading panel-system"><i class="fa fa-key fa-fw"></i><span data-i18n="conf_network_tok_title"></span></div>
 							<div class="panel-body">
 								<div id="tok_desc_cont"></div>
 								<div id="tktable"></div>
