--- a/assets/webconfig/index.html
+++ b/assets/webconfig/index.html
@@ -125,13 +125,13 @@
 				</a>
 			</li>
 				<!-- instance switcher -->
-				<li class="dropdown" id="btn_hypinstanceswitch" style="display:none">
-					<a class="dropdown-toggle" data-toggle="dropdown" href="#">
-						<i class="fa fa-exchange fa-fw"></i> <i class="fa fa-caret-down"></i>
-					</a>
-					<ul id="hyp_inst_listing" class="dropdown-menu dropdown-alerts">
-					</ul>
-				</li>
+				<!-- <li class="dropdown" id="btn_hypinstanceswitch" style="display:none"> -->
+					<!-- <a class="dropdown-toggle" data-toggle="dropdown" href="#"> -->
+						<!-- <i class="fa fa-exchange fa-fw"></i> <i class="fa fa-caret-down"></i> -->
+					<!-- </a> -->
+					<!-- <ul id="hyp_inst_listing" class="dropdown-menu dropdown-alerts"> -->
+					<!-- </ul> -->
+				<!-- </li> -->
 			<!--
 				<li class="dropdown" id="btn_instanceswitch" style="display:none">
 					<a>
@@ -220,6 +220,7 @@
 					<ul class="nav" id="side-menu">
 						<li> <a class="inactive mnava" href="#dashboard"><i class="fa fa-dashboard fa-fw"></i><span  data-i18n="main_menu_dashboard_token">Dashboard</span></a> </li>
 						<li> <a class="inactive mnava" href="#conf_general"><i class="fa fa-wrench fa-fw"></i><span  data-i18n="main_menu_general_conf_token">General</span></a> </li>
+						<li> <a class="inactive mnava" href="#conf_network"><i class="fa fa-sitemap fa-fw"></i><span  data-i18n="main_menu_network_conf_token">Network</span></a> </li>
 						<li>
 							<a class="inactive"><i class="fa fa-cog fa-fw"></i><span  data-i18n="main_menu_configuration_token">Configuration</span><span class="fa arrow"></span></a>
 							<ul class="nav nav-second-level">
@@ -227,7 +228,6 @@
 								<li> <a class="inactive mnava" href="#conf_grabber"><i class="fa fa-camera fa-fw"></i><span  data-i18n="main_menu_grabber_conf_token">Capturing Hardware</span></a> </li>
 								<li> <a class="inactive mnava" href="#conf_effect"><i class="fa fa-spinner fa-fw"></i><span  data-i18n="main_menu_effect_conf_token">Effects</span></a> </li>
 								<li> <a class="inactive mnava" href="#conf_colors"><i class="fa fa-photo fa-fw"></i><span  data-i18n="main_menu_colors_conf_token">Image Processing</span></a> </li>
-								<li> <a class="inactive mnava" href="#conf_network"><i class="fa fa-sitemap fa-fw"></i><span  data-i18n="main_menu_network_conf_token">Network</span></a> </li>
 							</ul>
 						</li>
 						<li> <a class="inactive mnava" href="#remote"><i class="fa fa-wifi fa-fw"></i><span  data-i18n="main_menu_remotecontrol_token">Remote Control</span></a>	</li>
@@ -251,11 +251,11 @@
 
 		<!-- Page Content -->
 		<div id="page-wrapper" style="padding-top:10px; overflow: hidden;">
-		<div id="dashboard_active_instance" style="display:none;padding:0 10px;margin:0">
-			<div class="bs-callout bs-callout-success">
-				<h4 id="dashboard_active_instance_friendly_name"></h4>
-			</div>
-		</div>
+		<!-- <div id="dashboard_active_instance" style="display:none;padding:0 10px;margin:0"> -->
+			<!-- <div class="bs-callout bs-callout-success"> -->
+				<!-- <h4 id="dashboard_active_instance_friendly_name"></h4> -->
+			<!-- </div> -->
+		<!-- </div> -->
 		<div id="hyperion_global_setting_notify" style="display:none;padding:0 10px;margin:0">
 			<div class="bs-callout bs-callout-warning">
 				<h4 data-i18n="dashboard_message_global_setting_t"></h4>
