--- a/assets/webconfig/content/conf_colors.html
+++ b/assets/webconfig/content/conf_colors.html
@@ -5,9 +5,9 @@
 			<h3 class="page-header"><i class="fa fa-photo fa-fw"></i><span  data-i18n="main_menu_colors_conf_token">Image Processing</span></h3> 
 
 			<div class="panel panel-default">
-				<div class="panel-heading panel-instance">
-					<span id="instance_name">Instance</span>
-					<div class="dropdown pull-right" id="btn_hypinstanceswitch" style="cursor:pointer">
+				<div class="panel-heading panel-instance" style="display:flex;align-items:center">
+					<div id="instance_name">Instance</div>
+					<div class="dropdown" id="btn_hypinstanceswitch" style="cursor:pointer;margin-left:10px">
 						<a class="dropdown-toggle" data-toggle="dropdown" href="#">
 							<i class="mdi mdi-lightbulb-group mdi-24px"></i><i class="mdi mdi-menu-down mdi-24px"></i>
 						</a>
