Add CPU-Model to SysInfo

--- a/assets/webconfig/content/about.html
+++ b/assets/webconfig/content/about.html
@@ -42,10 +42,13 @@
 	info += '- UI Lang:     ' + storedLang + ' (BrowserLang: ' + navigator.language + ')\n';
 	info += '- UI Access:   ' + storedAccess + '\n';
 	//info += 'Log lvl:     ' + window.serverConfig.logger.level + '\n';
-	info += '- Avail Capt:  ' + window.serverInfo.grabbers.available + '\n\n';
+	info += '- Avail Capt:  ' + window.serverInfo.grabbers.available + '\n';
+	info += '\n';
+
 	info += 'Hyperion Server OS: \n';
 	info += '- Distribution: ' + sys.prettyName + '\n';
-	info += '- Arch:         ' + sys.architecture + '\n';
+	info += '- Architecture: ' + sys.architecture + '\n';
+	info += '- CPU Model:    ' + sys.cpuModel+'\n';
 	info += '- Kernel:       ' + sys.kernelType + ' (' + sys.kernelVersion + ' (WS: ' + sys.wordSize + '))\n';
 	info += '- Browser:      ' + navigator.userAgent + ' </pre>';
 
