--- a/assets/webconfig/content/about.html
+++ b/assets/webconfig/content/about.html
@@ -48,7 +48,9 @@
 	info += 'Hyperion Server OS: \n';
 	info += '- Distribution: ' + sys.prettyName + '\n';
 	info += '- Architecture: ' + sys.architecture + '\n';
-	info += '- CPU Model:    ' + sys.cpuModel+'\n';
+	info += '- CPU Model:    ' +sys.cpuModelName + '\n';
+	info += '- CPU Type:     ' +sys.cpuModelType + '\n';
+	info += '- CPU Revision: ' +sys.cpuRevision + '\n';
 	info += '- Kernel:       ' + sys.kernelType + ' (' + sys.kernelVersion + ' (WS: ' + sys.wordSize + '))\n';
 	info += '- Browser:      ' + navigator.userAgent + ' </pre>';
 
