--- a/assets/webconfig/content/about.html
+++ b/assets/webconfig/content/about.html
@@ -51,6 +51,7 @@
 	info += '- CPU Model:    ' +sys.cpuModelName + '\n';
 	info += '- CPU Type:     ' +sys.cpuModelType + '\n';
 	info += '- CPU Revision: ' +sys.cpuRevision + '\n';
+	info += '- CPU Hardware: ' +sys.cpuHardware + '\n';	
 	info += '- Kernel:       ' + sys.kernelType + ' (' + sys.kernelVersion + ' (WS: ' + sys.wordSize + '))\n';
 	info += '- Browser:      ' + navigator.userAgent + ' </pre>';
 
