--- a/assets/webconfig/content/about.html
+++ b/assets/webconfig/content/about.html
@@ -42,7 +42,10 @@
 	info += '- UI Lang:     ' + storedLang + ' (BrowserLang: ' + navigator.language + ')\n';
 	info += '- UI Access:   ' + storedAccess + '\n';
 	//info += 'Log lvl:     ' + window.serverConfig.logger.level + '\n';
-	info += '- Avail Capt:  ' + window.serverInfo.grabbers.available + '\n\n';
+	info += '- Avail Capt:  ' + window.serverInfo.grabbers.available + '\n';
+	info += '- Database:    ' + (shy.readOnlyMode ? "ready-only" : "read/write") + '\n';
+	info += '\n';
+
 	info += 'Hyperion Server OS: \n';
 	info += '- Distribution: ' + sys.prettyName + '\n';
 	info += '- Arch:         ' + sys.architecture + '\n';
