--- a/assets/webconfig/content/about.html
+++ b/assets/webconfig/content/about.html
@@ -48,10 +48,16 @@
 	info += 'Hyperion Server OS: \n';
 	info += '- Distribution: ' + sys.prettyName + '\n';
 	info += '- Architecture: ' + sys.architecture + '\n';
-	info += '- CPU Model:    ' +sys.cpuModelName + '\n';
-	info += '- CPU Type:     ' +sys.cpuModelType + '\n';
-	info += '- CPU Revision: ' +sys.cpuRevision + '\n';
-	info += '- CPU Hardware: ' +sys.cpuHardware + '\n';	
+
+	if (sys.cpuModelName)
+	  info += '- CPU Model:    ' + sys.cpuModelName + '\n';
+	if (sys.cpuModelType)
+	  info += '- CPU Type:     ' + sys.cpuModelType + '\n';
+	if (sys.cpuRevision)
+	  info += '- CPU Revision: ' + sys.cpuRevision + '\n';
+	if (sys.cpuHardware)
+	  info += '- CPU Hardware: ' + sys.cpuHardware + '\n';	
+
 	info += '- Kernel:       ' + sys.kernelType + ' (' + sys.kernelVersion + ' (WS: ' + sys.wordSize + '))\n';
 	info += '- Browser:      ' + navigator.userAgent + ' </pre>';
 
