Additional information on system used (#1045)
* Allow --version, even if hyperion is already running

* Add CPU-Model to SysInfo

* Add additional CPUInfos

* Use fileUtils & RegEx on CPU-Info

* Add CPU - Hardware info

* Update changelog

* Suppress empty CPU info elements

--- a/assets/webconfig/content/about.html
+++ b/assets/webconfig/content/about.html
@@ -42,10 +42,22 @@
 	info += '- UI Lang:     ' + storedLang + ' (BrowserLang: ' + navigator.language + ')\n';
 	info += '- UI Access:   ' + storedAccess + '\n';
 	//info += 'Log lvl:     ' + window.serverConfig.logger.level + '\n';
-	info += '- Avail Capt:  ' + window.serverInfo.grabbers.available + '\n\n';
+	info += '- Avail Capt:  ' + window.serverInfo.grabbers.available + '\n';
+	info += '\n';
+
 	info += 'Hyperion Server OS: \n';
 	info += '- Distribution: ' + sys.prettyName + '\n';
-	info += '- Arch:         ' + sys.architecture + '\n';
+	info += '- Architecture: ' + sys.architecture + '\n';
+
+	if (sys.cpuModelName)
+	  info += '- CPU Model:    ' + sys.cpuModelName + '\n';
+	if (sys.cpuModelType)
+	  info += '- CPU Type:     ' + sys.cpuModelType + '\n';
+	if (sys.cpuRevision)
+	  info += '- CPU Revision: ' + sys.cpuRevision + '\n';
+	if (sys.cpuHardware)
+	  info += '- CPU Hardware: ' + sys.cpuHardware + '\n';	
+
 	info += '- Kernel:       ' + sys.kernelType + ' (' + sys.kernelVersion + ' (WS: ' + sys.wordSize + '))\n';
 	info += '- Browser:      ' + navigator.userAgent + ' </pre>';
 
