Read-Only Configuration-Database support (#1046)

--- a/assets/webconfig/content/about.html
+++ b/assets/webconfig/content/about.html
@@ -43,6 +43,8 @@
 	info += '- UI Access:   ' + storedAccess + '\n';
 	//info += 'Log lvl:     ' + window.serverConfig.logger.level + '\n';
 	info += '- Avail Capt:  ' + window.serverInfo.grabbers.available + '\n';
+	info += '- Database:    ' + (shy.readOnlyMode ? "ready-only" : "read/write") + '\n';
+
 	info += '\n';
 
 	info += 'Hyperion Server OS: \n';
